--- a/template/index.html
+++ b/template/index.html
@@ -49,6 +49,11 @@
                 </p>
 
                 <br><br>
+
+
+
+
+
     
                 <form action="/OT2transfer.html" method="POST" enctype="multipart/form-data"> 
                     <fieldset>
@@ -72,7 +77,13 @@
                         <label for="samples">Number of Samples</label><br>
                         <input type="number" name="samples" id="samples" placeholder="96" min="1" max="96" required>
                     </p><br>
-    
+
+                <!--    <label for="input-2-a">input 2</label>
+                        <input class="first-input" id="input-2-a" type="checkbox">
+
+                        <label class="hidden"><input id="input-2-b" type="checkbox">hidden-2</label> -->
+
+
                     <p>
                         <label for="inputformat">Input Format of Samples</label><br>
                         <select name="inputformat" id="inputformat">
@@ -119,7 +130,7 @@
     
                             <optgroup label="qPCR">
                                 <option value="qPCRstrip">qPCR strip</option>
-                                <! –– <option value="qPCRplate">qPCR plate*</option> ––>
+                                <!-- <option value="qPCRplate">qPCR plate*</option> -->
                             </optgroup>
     
                             <optgroup label="Index PCR">
@@ -160,19 +171,19 @@
                     <em>Protocol</em>. The protocol list 4 options the user can select from; "Extraction","Library", "qPCR", and "IndexPCR". The Alberdi group has divided their work into 4 sections, however each entail different steps. a. Extraction is a total nucleic extraction, b. Library is Covaris Fragmentation preparation, library building and library purification of extracted samples, c. qPCR is qPCR setup of purified libraries, and d. is Index PCR and following purification of the samples. 
                     For even more details of the exact methods check out: [Link] .
                 </li>
-                <br>
+                <br><br>
                 <li>
                     <em>User</em>. This option allow the user to ID their downloaded content to them. In the Alberdi group we often use RUN-specific IDs, however you can name it whatever suits your workflow.
                 </li>
-                <br>
+                <br><br>
                 <li>
                     <em>Number of Samples</em>. Here the user select the number of samples (1-96) they have in their run. The number of samples will be overriding by the csv file uploaded data during the protocols related to the Covaris fragmentation and Library Building to ensure parity. OBS: will be changed later to verify if the sample number and csv is equal to avoid unfortunate misalignments. 
                 </li>
-                <br>
+                <br><br>
                 <li>
                     <em>Input- and outputformat</em>. The Input- and outputformats give the user the option to obtain the product from the protocols in a specific container. Each protocol has its specific formats, given how the protocol works. The output of 1 protocol is always a option of the next protocols in line. In the SOPs there will be a material list of specific labware - remember some suppliers might have slightly different dimension between labware options, and it is as such always recommended to check the compatability. 
                 </li>
-                <br>    
+                <br><br>    
                 <li>
                     <em>Csv file</em>. The Covaris Fragmentation preparation and Library Building protocols require you, the user, to upload a csv file. The Covaris Fragmentation preparation use the information to normalise samples concentrations (as wished), and the Library Building use it to give either 20 or 10 µM adaptor. In case you are in doubt of the data format, there is a Excel template to for you to download an insert your information in. This ensure the column naming is correct. The web application will attempt to convert the data file into English comma separation and numbers.
                 </li>
