--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -37,3 +37,13 @@ a:hover, a:active {
 .center {
     text-align: center;
 }
+
+.beeproduct {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 0;
+    width: 0;
+    z-index: -1;
+}
