--- a/template/csv-not-found.html
+++ b/template/csv-not-found.html
@@ -32,8 +32,9 @@
     <nav aria-label="primary-navigation">
         <h2>Overview</h2>
         <ul>
+            <li><a href="SOP">Standard Operational Procedure (SOP)</a></li>
             <li><a href="#Datasubmission">Data Submission</a></li>
-            <li><a href="#Explanation">Input Explanation</a></li>
+            <li><a href="#Explanation">Data Submission Explanation</a></li>
         </ul>
     </nav>
 
@@ -43,6 +44,15 @@
         <article>
 
             <p style="color:#FF0000" style="font-size:160%" class = "center"><Strong>Error in submission! Please upload a csv file following the template when downloading scripts for library building.</Strong></p>
+
+
+            <section id="SOP">
+                <br>
+                <p> The EHI project uses Opentrons OT-2 to perform part of the laboratory work when processing samples to send for sequencing. Underneath you can find submission form to generate custom EHI protocols, which fits the users need in terms of number of samples processed and what labware used for the samples. To allow anyone access to run our laboratory automation pipeline, you can check out the <a href="static\SOPs\SOP_Template_V1.1.pdf">Standard Operational Procedure (SOP)</a>, where you can find a discription of the work protocol, warning, and list of consumables. Remember, all work might require <strong>fine tuning</strong> localy due to minor variation.
+                </p>
+            </section>
+
+
             <section id="Datasubmission">
                 <h2>Data submission</h2>
                 <br>
