--- a/template/index.html
+++ b/template/index.html
@@ -32,6 +32,7 @@
     <nav aria-label="primary-navigation">
         <h2>Overview</h2>
         <ul>
+            <li><a href="SOP">Standard Operational Procedure (SOP)</a></li>
             <li><a href="#Datasubmission">Data Submission</a></li>
             <li><a href="#Explanation">Data Submission Explanation</a></li>
         </ul>
@@ -42,6 +43,13 @@
     <main>
            
         <article>
+            <section id="SOP">
+                <br>
+                <p> The EHI project uses Opentrons OT-2 to perform part of the laboratory work when processing samples to send for sequencing. Underneath you can find submission form to generate custom EHI protocols, which fits the users need in terms of number of samples processed and what labware used for the samples. To allow anyone access to run our laboratory automation pipeline, you can check out the <a href="static\SOPs\SOP_Template_V1.1.pdf">Standard Operational Procedure (SOP)</a>, where you can find a discription of the work protocol, warning, and list of consumables. Remember, all work might require <strong>fine tuning</strong> localy due to minor variation.
+                </p>
+            </section>
+
+
             <section id="Datasubmission">
                 <h2>Data submission</h2>
                 <br>
